delete other branch